--- a/_includes/archive-people-index.html
+++ b/_includes/archive-people-index.html
@@ -1,18 +1,17 @@
 
 <div class="people-index">
     <div class="people-picture">
-    {% if post.image %}
+	{% if post.image %}
 
-	<img width="150" height="150" src="assets/img/people/{{ post.image }}"
-	class="attachment-thumbnail size-thumbnail wp-post-image" alt="" />
-    {% else %}
-	<img width="150" height="150" src="assets/img/people/unknown_person.jpg"
-	class="attachment-thumbnail size-thumbnail wp-post-image" alt="" />
-    {% endif %}
-
-    {% if post.affiliation %}
-    <p>{{ post.affiliation }}</p>
-    {% endif %}
+	    <img width="150" height="150" src="assets/img/people/{{ post.image }}"
+	    class="attachment-thumbnail size-thumbnail wp-post-image" alt="" />
+	{% else %}
+	    <img width="150" height="150" src="assets/img/people/unknown_person.jpg"
+	    class="attachment-thumbnail size-thumbnail wp-post-image" alt="" />
+	{% endif %}
+    </div>
+    <div class="people-name">
+        {{ post.name }}
     </div>
 
 </div>
